<?xml version="1.0" encoding="UTF-8" standalone="no"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.humanresources</groupId>
    <artifactId>humanresources-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Human Resources Parent</name>

    <modules>
        <module>humanResources-core</module>
        <module>humanResources-rest</module>
    </modules>

    <properties>

        <!-- java.version>1.8</java.version -->
        <java.version>17</java.version>
        <!-- use UTF-8 for everything -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring.boot.version>3.1.0</spring.boot.version>

        <!-- files.to.exclude.from.syncspot-webapp>
            **/syncspot-webapp/
        </files.to.exclude.from.syncspot-webapp -->

        <humanresources-core.version>0.0.1-SNAPSHOT</humanresources-core.version>

        <org.projectlombok.version>1.18.26</org.projectlombok.version>

        <org.mapstruct.version>1.5.1.Final</org.mapstruct.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

	<profiles>
	
	        <profile>
	            <id>default</id>
	            <activation>
	                <activeByDefault>false</activeByDefault>
	            </activation>
	            <properties>
	                 <!--
                    Specifies the build.profile.id property that must be equal than the name of
                    the directory that contains the profile specific configuration file.
                    Because the name of the directory that contains the configuration file of the
                    production profile is production, we must set the value of the build.profile.id
                    property to production.
                -->
                	<build.profile.id>production</build.profile.id>
                
	                <war.suffix></war.suffix>

	                <embedded.tomcat.scope>provided</embedded.tomcat.scope>

	
	            </properties>
	        </profile>
	        
        <!-- The Configuration of the development profile -->
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>

                <war.suffix></war.suffix>
                <embedded.tomcat.scope>compile</embedded.tomcat.scope>
                <files.to.exclude.from.rsapp20-jsonrpc></files.to.exclude.from.rsapp20-jsonrpc>

                <!--
                    Specifies the build.profile.id property that must be equal than the name of
                    the directory that contains the profile specific configuration file.
                    Because the name of the directory that contains the configuration file of the
                    development profile is dev, we must set the value of the build.profile.id
                    property to dev.
                -->
                <build.profile.id>development</build.profile.id>
                <!--
                    Only unit tests are run when the development profile is active
                -->
                <skip.integration.tests>true</skip.integration.tests>
                <skip.unit.tests>false</skip.unit.tests>
            </properties>
        </profile>

        <!-- The Configuration of the integration-test profile -->
        <profile>
            <id>integration-test</id>
            <properties>
                <!--
                    Specifies the build.profile.id property that must be equal than the name of
                    the directory that contains the profile specific configuration file.
                    Because the name of the directory that contains the configuration file of the
                    integration-test profile is integration-test, we must set the value of the
                    build.profile.id property to integration-test.
                -->
                <build.profile.id>integration-test</build.profile.id>
                <!--
                    Only integration tests are run when the integration-test profile is active
                -->
                <skip.integration.tests>false</skip.integration.tests>
                <skip.unit.tests>true</skip.unit.tests>
            </properties>
        </profile>
	
	</profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>

            </dependency>

            <dependency>
                <groupId>org.humanresources</groupId>
                <artifactId>humanresources-core</artifactId>
                <version>${humanresources-core.version}</version>
            </dependency>

            <dependency>
                <groupId>org.humanresources</groupId>
                <artifactId>humanresources-core</artifactId>
                <version>${humanresources-core.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>

			<dependency>
			    <groupId>commons-beanutils</groupId>
			    <artifactId>commons-beanutils</artifactId>
			    <version>1.9.4</version>
			</dependency>

			<dependency>
			    <groupId>org.apache.commons</groupId>
			    <artifactId>commons-lang3</artifactId>
			    <version>3.9</version>
			</dependency>
			
			<dependency>
			    <groupId>org.mockito</groupId>
			    <artifactId>mockito-core</artifactId>
			    <version>2.12.0</version>
			    <scope>test</scope>
			</dependency>


            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.6</version>
            </dependency>

            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit-fluent</artifactId>
                <version>2.6.1</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${org.projectlombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${org.mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.3.0</version>
            </dependency>

        </dependencies>

    </dependencyManagement>
</project>